echo-gateway/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: isolated
spec: {}
status: {}
