echo-gateway/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: echo-app
  name: iso-svc
  namespace: isolated
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: echo-app
  type: ClusterIP
status:
  loadBalancer: {}
