echo-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: isolated-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-httproute
spec:
  parentRefs:
  - name: isolated-gateway
  hostnames:
  - "isolated.192.168.97.24.nip.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/echo"
    backendRefs:
    - name: iso-svc
      port: 80
